Fixing basic auth header
